Add css file, updated images folder and style guide

--- a/ComversePage/index.html
+++ b/ComversePage/index.html
@@ -4,24 +4,25 @@ To change this template use Tools | Templates.
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title></title>
+	<title>Comverse HomePage</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     
     <div class="site-container">
 		<header>
-			<div class="header-container">
-				<img src="">
+			<div class="header-container clearfix">
+				<img src="images/icons/logo.png">
 				<div class="manu">
 					<ul>
 						<li><a href="#">YOUR NEEDS</a></li>
-						<li><a href="#"></a>OUR PORTFOLIO</li>
-						<li><a href="#"></a>NEWS & MEDIA</li>
-						<li><a href="#"></a>ABOUT COMVERSE</li>
+						<li><a href="#">OUR PORTFOLIO</a></li>
+						<li><a href="#">NEWS & MEDIA</a></li>
+						<li><a href="#">ABOUT COMVERSE</a></li>
 					</ul>
 				</div>
 				<div class="searchNlang-wrapp">
-					<div class="user-options">
+					<div class="user-options clearfix">
 						<ul>
 							<li>EN
 								<ul>
@@ -41,72 +42,94 @@ To change this template use Tools | Templates.
 		<section class="main-sec">
 			<div class="main-container">
 				<div class="site-title">
-					<h1><span>FREE</span> YOUR MARKETS FROM IT <span>COMPLEXITY</span></h1>
-					<p>Comverse Policy Studio</p>
-					<p><span>1st</span> Ever Marketign-Oriented Policy Tool</p>
-					<button>LEARN MORE <div class="arrow"></div></button>
-				</div>
-				<div class="rectangle">
-					<div class="rec-content">
-						<p class="rec-sent">Comverse Is Value-Added Service Global Market Leader.</p>
-						<p class="details"><span></span>Read more</p>
+					<p class="title"><span>FREE</span> YOUR MARKETS FROM IT <span>COMPLEXITY</span></p>
+					<p class="subtitle">Comverse Policy Studio</p>
+					<p class="subtitle"><span>1st</span> Ever Marketign-Oriented Policy Tool</p>
+					<div class="mainbutton-container">
+						<button class="button">LEARN MORE <div class="arrow"></div></button>
 					</div>
 				</div>
-				<div class="rectangle">
-					<div class="rec-content">
-						<p class="rec-sent">Comverse Is Value-Added Service Global Market Leader.</p>
-						<p class="details"><span></span>Read more</p>
+				<div class="rec-container clearfix">
+
+					<div class="rectangle">
+						<div class="rec-content">
+							<p class="rec-sent">Comverse Is Value-Added Service Global Market Leader.</p>
+							<div class="details-container">
+								<img src="images/icons/Link2.png">
+								<p class="details">Read more</p>
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="rectangle">
-					<div class="rec-content">
-						<p class="rec-sent">Comverse Is Value-Added Service Global Market Leader.</p>
-						<p class="details"><span></span>Read more</p>
+
+					<div class="rectangle">
+						<div class="rec-content">
+							<p class="rec-sent">Manged Services World Congress September 18-19 Berlin, Germany</p>
+							<div class="details-container">
+								<img src="images/icons/icon_copy_6.png">
+								<p class="details">Read more</p>
+							</div>
+						</div>
 					</div>
+
+					<div class="rectangle">
+						<div class="rec-content">
+							<p class="rec-sent">Comverse: Enabling a world of Conected Possibilities</p>
+							<div class="details-container">
+								<img src="images/icons/icon.png">
+								<p class="details">Watch Now</p>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</section>
 
 		<section class="solutions">
 			<div class="solutions-wrapp">
-				<h1>WHAT CAN WE DO FOR YOU?</h1>
-				<div class="s-iconswrapp">
+				<p>WHAT CAN WE DO FOR YOU?</p>
+				<div class="s-iconswrapp clearfix">
 					<div class="icon">
-						<img src="">
+						<img src="images/icons/4.png">
 						<p class="subtxt"></p>
 					</div>
 					<div class="icon">
-						<img src="">
+						<img src="images/icons/Robot.png">
 						<p class="subtxt"></p>
 					</div>
 					<div class="icon">
-						<img src="">
+						<img src="images/icons/4.png">
 						<p class="subtxt"></p>
 					</div>
 					<div class="icon">
-						<img src="">
+						<img src="images/icons/4.png">
 						<p class="subtxt"></p>
 					</div>
 					<div class="icon">
-						<img src="">
+						<img src="images/icons/Vector_Smart_Object.png">
 						<p class="subtxt"></p>
 					</div>
 					<div class="icon">
-						<img src="">
+						<img src="images/icons/Speech_Bubble.png">
 						<p class="subtxt"></p>
 					</div>
 				</div>
 
-				<button>LEARN MORE <div class="arrow"></div></button>
+				<div class="slutionbutton-container">
+					<button class="button">See all of our solutions <div class="arrow"></div></button>
+				</div>
 			</div>
 		</section>
 
 		<section class="events">
 			<div class="events-wrapp">
-				<h1>WHAT'S HAPPENING AT COMVERSE?</h1>
-				<div class="box-wrapp">
+				<p>WHAT'S HAPPENING AT COMVERSE?</p>
+				<div class="boxes-wrapp clearfix">
+
 					<div class="box-container">
-						<h1>NEWS</h1>
+						<div class="box-title">
+							<h1>NEWS</h1>
+						</div>
 						<div class="b-rec">
 							<div class="b-rec-content clearfix">
 								<div class="rec-date">
@@ -117,13 +140,15 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img src="">
+							<img src="images/icons/Shape1.png">
 							<p>All News</p>
 						</div>
 					</div>
 
 					<div class="box-container">
-						<h1>NEWS</h1>
+						<div class="box-title">
+							<h1>EVENTS</h1>
+						</div>
 						<div class="b-rec">
 							<div class="b-rec-content clearfix">
 								<div class="rec-date">
@@ -134,13 +159,15 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img src="">
-							<p>All News</p>
+							<img src="images/icons/calendar-icon.png">
+							<p>All Events</p>
 						</div>
 					</div>
 
 					<div class="box-container">
-						<h1>NEWS</h1>
+						<div class="box-title">
+							
+						</div>
 						<div class="b-rec">
 							<div class="b-rec-content clearfix">
 								<div class="rec-date">
@@ -151,8 +178,8 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img src="">
-							<p>All News</p>
+							<img src="images/icons/calendar-icon.png">
+							<p>All Events</p>
 						</div>
 					</div>
 				</div>
@@ -161,7 +188,7 @@ To change this template use Tools | Templates.
 
 		<section class="success">
 			<div class="success-container">
-				<h1>SUCCESS STORIES</h1>
+				<p>SUCCESS STORIES</p>
 				<div class="sboxes-container">
 					<div class="sbox">
 						<div class="big-box">
