--- a/StyleGuide/styleguide.html
+++ b/StyleGuide/styleguide.html
@@ -50,10 +50,38 @@ To change this template use Tools | Templates.
 		<section class="blured-recs">
 			<div class="blured-container">
 				<div class="b-rec">
-					<div class=""></div>
+					<div class="b-rec-content clearfix">
+						<div class="rec-date">
+							<p class="day">04</p>
+							<p class="month">SEP</p>
+						</div>
+						<p>Comverse Regains Lead in Convergent Charging Market Regains Lead in</p>
+					</div>
 				</div>
 			</div>
 		</section>
+
+		<section class="boxes-section">
+			<div class="sboxes-container">
+				<div class="sbox">
+						<div class="big-box">
+							<div class="bbox-content">
+								<img src="">
+								<p>We have very good and very warm relations with Comverse. We always achievet.."</p>
+								<div class="details-con">
+									<p>SERGEY KOROTYCH</p>
+									<p>Deputy CTO, 3 Mob Ukraine</p>
+									<img src="">
+								</div>
+							</div>
+						</div>
+						<div class="small-box"></div>
+						<div class="small-box"></div>
+						<div class="small-box"></div>
+					</div>
+			</div>
+		</section>
+
 	</div>
 
 </body>
