upadte index and style files

--- a/ComversePage/index.html
+++ b/ComversePage/index.html
@@ -11,7 +11,7 @@ To change this template use Tools | Templates.
     
     <div class="site-container">
 		<header>
-			<div class="header-container clearfix">
+			<div class="header-container site-wrapper clearfix">
 				<img src="images/icons/logo.png">
 				<div class="manu">
 					<ul>
@@ -40,7 +40,7 @@ To change this template use Tools | Templates.
 		</header>
 
 		<section class="main-sec">
-			<div class="main-container">
+			<div class="main-container site-wrapper">
 				<div class="site-title">
 					<p class="title"><span>FREE</span> YOUR MARKETS FROM IT <span>COMPLEXITY</span></p>
 					<p class="subtitle">Comverse Policy Studio</p>
@@ -55,7 +55,7 @@ To change this template use Tools | Templates.
 						<div class="rec-content">
 							<p class="rec-sent">Comverse Is Value-Added Service Global Market Leader.</p>
 							<div class="details-container">
-								<img src="images/icons/Link2.png">
+								<img class="txt-icons" src="images/icons/Link2.png">
 								<p class="details">Read more</p>
 							</div>
 						</div>
@@ -65,7 +65,7 @@ To change this template use Tools | Templates.
 						<div class="rec-content">
 							<p class="rec-sent">Manged Services World Congress September 18-19 Berlin, Germany</p>
 							<div class="details-container">
-								<img src="images/icons/icon_copy_6.png">
+								<img class="txt-icons" src="images/icons/icon_copy_6.png">
 								<p class="details">Read more</p>
 							</div>
 						</div>
@@ -75,7 +75,7 @@ To change this template use Tools | Templates.
 						<div class="rec-content">
 							<p class="rec-sent">Comverse: Enabling a world of Conected Possibilities</p>
 							<div class="details-container">
-								<img src="images/icons/icon.png">
+								<img class="txt-icons" src="images/icons/icon.png">
 								<p class="details">Watch Now</p>
 							</div>
 						</div>
@@ -86,32 +86,33 @@ To change this template use Tools | Templates.
 		</section>
 
 		<section class="solutions">
-			<div class="solutions-wrapp">
+			<div class="solutions-wrapp site-wrapper">
 				<p>WHAT CAN WE DO FOR YOU?</p>
 				<div class="s-iconswrapp clearfix">
 					<div class="icon">
+						
 						<img src="images/icons/4.png">
-						<p class="subtxt"></p>
+						<p class="subtxt">Data monetization</p>
 					</div>
 					<div class="icon">
 						<img src="images/icons/Robot.png">
-						<p class="subtxt"></p>
+						<p class="subtxt">Machine to machine (M2M)</p>
 					</div>
 					<div class="icon">
 						<img src="images/icons/4.png">
-						<p class="subtxt"></p>
+						<p class="subtxt">Over-the-top (OTT)</p>
 					</div>
 					<div class="icon">
 						<img src="images/icons/4.png">
-						<p class="subtxt"></p>
+						<p class="subtxt">Cloud computing</p>
 					</div>
 					<div class="icon">
 						<img src="images/icons/Vector_Smart_Object.png">
-						<p class="subtxt"></p>
+						<p class="subtxt">Manged services</p>
 					</div>
 					<div class="icon">
 						<img src="images/icons/Speech_Bubble.png">
-						<p class="subtxt"></p>
+						<p class="subtxt">Social Media</p>
 					</div>
 				</div>
 
@@ -122,7 +123,7 @@ To change this template use Tools | Templates.
 		</section>
 
 		<section class="events">
-			<div class="events-wrapp">
+			<div class="events-wrapp site-wrapper">
 				<p>WHAT'S HAPPENING AT COMVERSE?</p>
 				<div class="boxes-wrapp clearfix">
 
@@ -140,7 +141,7 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img src="images/icons/Shape1.png">
+							<img class="txt-icons" src="images/icons/Shape1.png">
 							<p>All News</p>
 						</div>
 					</div>
@@ -159,7 +160,7 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img src="images/icons/calendar-icon.png">
+							<img class="txt-icons" src="images/icons/calendar-icon.png">
 							<p>All Events</p>
 						</div>
 					</div>
@@ -178,7 +179,7 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img src="images/icons/calendar-icon.png">
+							<img class="txt-icons" src="images/icons/calendar-icon.png">
 							<p>All Events</p>
 						</div>
 					</div>
@@ -187,7 +188,7 @@ To change this template use Tools | Templates.
 		</section>
 
 		<section class="success">
-			<div class="success-container">
+			<div class="success-container site-wrapper">
 				<p>SUCCESS STORIES</p>
 				<div class="sboxes-container">
 					<div class="sbox">
