major changes in folders

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!--
 To change this template use Tools | Templates.
 -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Comverse HomePage</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="Style/style.css">
 </head>
 <body>
     
     <div class="site-container">
 		<header>
 			<div class="header-container site-wrapper clearfix">
-				<img src="images/icons/logo.png">
+				<img src="assets/icons/logo.png">
 				<div class="manu">
 					<ul>
 						<li><a href="#">YOUR NEEDS</a></li>
@@ -55,7 +55,7 @@ To change this template use Tools | Templates.
 						<div class="rec-content">
 							<p class="rec-sent">Comverse Is Value-Added Service Global Market Leader.</p>
 							<div class="details-container">
-								<img class="txt-icons" src="images/icons/Link2.png">
+								<img class="txt-icons" src="assets/icons/Link2.png">
 								<p class="details">Read more</p>
 							</div>
 						</div>
@@ -65,7 +65,7 @@ To change this template use Tools | Templates.
 						<div class="rec-content">
 							<p class="rec-sent">Manged Services World Congress September 18-19 Berlin, Germany</p>
 							<div class="details-container">
-								<img class="txt-icons" src="images/icons/icon_copy_6.png">
+								<img class="txt-icons" src="assets/icons/icon_copy_6.png">
 								<p class="details">Read more</p>
 							</div>
 						</div>
@@ -75,7 +75,7 @@ To change this template use Tools | Templates.
 						<div class="rec-content">
 							<p class="rec-sent">Comverse: Enabling a world of Conected Possibilities</p>
 							<div class="details-container">
-								<img class="txt-icons" src="images/icons/icon.png">
+								<img class="txt-icons" src="assets/icons/icon.png">
 								<p class="details">Watch Now</p>
 							</div>
 						</div>
@@ -91,27 +91,27 @@ To change this template use Tools | Templates.
 				<div class="s-iconswrapp clearfix">
 					<div class="icon">
 						
-						<img src="images/icons/4.png">
+						<img src="assets/icons/4.png">
 						<p class="subtxt">Data monetization</p>
 					</div>
 					<div class="icon">
-						<img src="images/icons/Robot.png">
+						<img src="assets/icons/Robot.png">
 						<p class="subtxt">Machine to machine (M2M)</p>
 					</div>
 					<div class="icon">
-						<img src="images/icons/4.png">
+						<img src="assets/icons/4.png">
 						<p class="subtxt">Over-the-top (OTT)</p>
 					</div>
 					<div class="icon">
-						<img src="images/icons/4.png">
+						<img src="assets/icons/4.png">
 						<p class="subtxt">Cloud computing</p>
 					</div>
 					<div class="icon">
-						<img src="images/icons/Vector_Smart_Object.png">
+						<img src="assets/icons/Vector_Smart_Object.png">
 						<p class="subtxt">Manged services</p>
 					</div>
 					<div class="icon">
-						<img src="images/icons/Speech_Bubble.png">
+						<img src="assets/icons/Speech_Bubble.png">
 						<p class="subtxt">Social Media</p>
 					</div>
 				</div>
@@ -141,7 +141,7 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img class="txt-icons" src="images/icons/Shape1.png">
+							<img class="txt-icons" src="assets/icons/Shape1.png">
 							<p>All News</p>
 						</div>
 					</div>
@@ -160,7 +160,7 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img class="txt-icons" src="images/icons/calendar-icon.png">
+							<img class="txt-icons" src="assets/icons/calendar-icon.png">
 							<p>All Events</p>
 						</div>
 					</div>
@@ -179,7 +179,7 @@ To change this template use Tools | Templates.
 							</div>
 						</div>
 						<div class="e-subtxt">
-							<img class="txt-icons" src="images/icons/calendar-icon.png">
+							<img class="txt-icons" src="assets/icons/calendar-icon.png">
 							<p>All Events</p>
 						</div>
 					</div>
